# Norm

./: .gitignore  LICENSE  Readme.md  __init__.py  benchmark.py  lint.sh  norm.py  pyproject.toml  pytest.ini  setup.py  syntax.sql  test_connection.py  test_norm.py  test_rows.py  tox.ini
benchmarks/: benchmark.py  profile_norm.py  shuttle_data_example.py
norm/: __init__.py  cached_property.py  connection.py  norm.py  norm_mssql.py  norm_myssql_connector.py  norm_psycopg2.py  norm_pymssql.py  norm_sqlalchemy.py  norm_sqlite3.py  relational.py  rows.py
tests/: test_connection.py  test_norm.py  test_pymssql.py  test_rows.py
