[tool.poetry]
name = "norm"
version = "1.4.3"
description = "Easy peasy SQL generation"
authors = ["Justin Van Winkle <justin.vanwinkle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0.4"
psycopg2-binary = "^2.8.4"
ipython = "^7.11.1"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
