[tool.poetry]
name = "norm"
version = "1.5.2"
description = "Easy peasy SQL generation"
authors = ["Justin Van Winkle <justin.vanwinkle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-flake8 = "*"
psycopg2-binary = "^2.8.4"
ipython = "*"
pytest = "*"
sqlalchemy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
