[tool.poetry]
name = "norm"
version = "1.6.1"
description = "Easy peasy SQL generation"
authors = ["Justin Van Winkle <justin.vanwinkle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.8.6"
ipython = "*"
pytest = "*"
sqlalchemy = "*"
tox = "^3.23.0"
pytest-flake8-v2 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
